--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 		<section class="container-3">
 
 			<div id="video-box">
-				<video src="vid/1.mp4" controls></video>
+				<video src="https://www.youtube.com/watch?v=wS4GGGgFHAg" controls></video>
 			</div>
 
 			<div id="description-box">
